major-feat: multipler mode with WS integration (#82)
